--- a/pipelines/products.yml
+++ b/pipelines/products.yml
@@ -479,12 +479,12 @@ jobs:
   - task: delete-deployments
     file: loggregator-ci/tasks/bosh-delete-all-deployments/task.yml
     params:
-      BBL_STATE_DIR: ((bbl_state_dir))
+      BBL_STATE_DIR: gcp/coconut
   - task: bbl-destroy
     file: cf-deployment-concourse-tasks/bbl-destroy/task.yml
     params:
-      BBL_STATE_DIR: ((bbl_state_dir))
-      BBL_GCP_SERVICE_ACCOUNT_KEY: ((bbl_state_dir))/service-account.key.json
+      BBL_STATE_DIR: gcp/coconut
+      BBL_GCP_SERVICE_ACCOUNT_KEY: gcp/coconut/service-account.key.json
   - put: deployments-loggregator
     params:
       repository: updated-bbl-state
@@ -1809,7 +1809,7 @@ jobs:
           cp cf-deployment/operations/use-compiled-releases.yml ops-files/
           cp cf-deployment/operations/experimental/use-compiled-releases-windows.yml ops-files/
           cp cf-deployment/operations/experimental/add-metric-store.yml ops-files/
-          cp bbl-state/${BBL_STATE_DIR}/ops-files/clients.yml ops-files/
+          cp bbl-state/${BBL_STATE_DIR}/ops-files/*.yml ops-files/
 
           cp cf-deployment/operations/windows1803-cell.yml ops-files/
           cp cf-deployment/operations/use-latest-windows1803-stemcell.yml ops-files/
@@ -1822,89 +1822,10 @@ jobs:
           cp loggregator-agent-release/manifests/operations/cf-deployment-windows-addon.yml ops-files/
           cp loggregator-agent-release/manifests/operations/cf-syslog-agent-skip-cert-verify-windows.yml ops-files/
 
-          cat <<EOT >> ops-files/on-the-fly.yml
-          - type: replace
-            path: /releases/name=loggregator
-            value:
-              name: loggregator
-              version: latest
-          - type: replace
-            path: /releases/name=loggregator-agent
-            value:
-              name: loggregator-agent
-              version: latest
-          - type: replace
-            path: /releases/name=cf-syslog-drain
-            value:
-              name: cf-syslog-drain
-              version: latest
-          - type: replace
-            path: /releases/name=statsd-injector
-            value:
-              name: statsd-injector
-              version: latest
-          - type: replace
-            path: /instance_groups/name=doppler/instances
-            value: 2
-          - type: replace
-            path: /instance_groups/name=diego-cell/instances
-            value: 3
-          - type: replace
-            path: /instance_groups/name=uaa/instances
-            value: 2
-          - type: replace
-            path: /instance_groups/name=doppler/vm_type
-            value: small-highmem
-          - type: replace
-            path: /update/max_in_flight
-            value: 10
-          - type: replace
-            path: /instance_groups/name=adapter/jobs/name=adapter/properties/scalablesyslog?/adapter?/syslog_skip_cert_verify?
-            value: true
-          - type: replace
-            path: /instance_groups/name=scheduler/instances
-            value: 3
-          - type: remove
-            path: /variables/name=cf_admin_password
-          - type: replace
-            path: /addons/name=prom_scraper/exclude?
-            value:
-                instance_groups:
-                - metric-store
-                - doppler
-
-          - type: replace
-            path: /instance_groups/name=doppler/jobs/-
-            value:
-              name: prom_scraper
-              release: loggregator-agent
-
-          - type: remove
-            path: /addons/name=loggregator_agent/jobs/name=loggr-expvar-forwarder
-
-          EOT
-  - task: set-vars-files
-    config:
-      platform: linux
-      image_resource:
-        type: docker-image
-        source:
-          repository: relintdockerhubpushbot/cf-deployment-concourse-tasks
-          tag: v3.19.0
-      outputs:
-      - name: vars-files
-      run:
-        path: "/bin/bash"
-        args:
-        - "-c"
-        - |
-          set -e
-
-          cat <<EOT >> vars-files/on-the-fly-vars.yml
-          cf_admin_password: ((coconut-password))
-          EOT
   - task: cf-deploy
     file: cf-deployment-concourse-tasks/bosh-deploy/task.yml
+    input_mapping:
+      vars-files: bbl-state
     params:
       BBL_STATE_DIR: ((bbl_state_dir))
       SYSTEM_DOMAIN: ((system_domain))
@@ -1913,7 +1834,7 @@ jobs:
         use-compiled-releases.yml
         use-compiled-releases-windows.yml
         add-metric-store.yml
-        clients.yml
+        loggregator-clients.yml
 
         windows1803-cell.yml
         use-latest-windows1803-stemcell.yml
@@ -1926,9 +1847,8 @@ jobs:
         cf-deployment-windows-addon.yml
         cf-syslog-agent-skip-cert-verify-windows.yml
 
-        on-the-fly.yml
-      VARS_FILES: |
-        on-the-fly-vars.yml
+        loggregator-acceptance.yml
+      VARS_FILES: ""
 
   - task: export-loggregator-release
     file: loggregator-ci/tasks/export-release/task.yml
@@ -1961,34 +1881,6 @@ jobs:
       BBL_STATE_DIR: ((bbl_state_dir))
       DEPLOYMENT_NAME: cf
       RELEASE_NAME: leadership-election
-  - task: save-vars-to-credhub
-    config:
-      platform: linux
-      image_resource:
-        type: docker-image
-        source:
-          repository: relintdockerhubpushbot/cf-deployment-concourse-tasks
-          tag: latest
-      inputs:
-      - name: bbl-state
-      params:
-        BBL_STATE_DIR: ((bbl_state_dir))
-      run:
-        path: "/bin/bash"
-        args:
-        - "-c"
-        - |
-          set -e
-
-          pushd bbl-state/${BBL_STATE_DIR} > /dev/null
-            eval "$(bbl print-env)"
-          popd
-
-          wget https://github.com/cloudfoundry-incubator/credhub-cli/releases/download/2.1.0/credhub-linux-2.1.0.tgz \
-          && tar xzvf credhub*.tgz ./credhub
-
-          ./credhub set -n /bosh-bbl-env-athabasca-2019-03-22t18-23z/cf/cf_admin_password -t password -w ((coconut-password))
-
   - task: enable-feature-flags
     file: cf-deployment-concourse-tasks/set-feature-flags/task.yml
     attempts: 3
