--- a/tasks/latency-test.yml
+++ b/tasks/latency-test.yml
@@ -5,12 +5,14 @@ image_resource:
     repository: loggregator/base
 inputs:
   - name: loggregator-tools
+  - name: loggregator-ci
 params:
   CF_API:
   USERNAME:
   PASSWORD:
   SPACE:
   ORG:
+  BBL_STATE_DIR:
   SKIP_CERT_VERIFY: false
   USE_CLIENT_AUTH: false
 run:
@@ -22,32 +24,7 @@ run:
 
       set -ex
 
-      if [ "$USE_CLIENT_AUTH" == "false" ]; then
-        if [ "$SKIP_CERT_VERIFY" == "true" ]; then
-          cf login \
-            -a "$CF_API" \
-            -u "$USERNAME" \
-            -p "$PASSWORD" \
-            -s "$SPACE" \
-            -o "$ORG" \
-            --skip-ssl-validation
-        else
-          cf login \
-            -a "$CF_API" \
-            -u "$USERNAME" \
-            -p "$PASSWORD" \
-            -s "$SPACE" \
-            -o "$ORG"
-        fi
-      else
-          cf api "$CF_API"
-          if [ "$SKIP_CERT_VERIFY" == "true" ]; then
-              cf auth "$USERNAME" "$PASSWORD" --client-credentials --skip-ssl-validation
-          else
-              cf auth "$USERNAME" "$PASSWORD" --client-credentials
-          fi
-          cf target -o "$ORG" -s "$SPACE"
-      fi
+      loggregator-ci/scripts/environment-targeting/target-cf.sh
 
       mkdir -p build-workspace/src/code.cloudfoundry.org/loggregator-tools
       cp -r loggregator-tools/. build-workspace/src/code.cloudfoundry.org/loggregator-tools/
