add optional bbl-state input to blackbox tests
Signed-off-by: Max Eshleman <meshleman@pivotal.io>

--- a/tasks/cf-blackbox/task.yml
+++ b/tasks/cf-blackbox/task.yml
@@ -5,6 +5,8 @@ image_resource:
     repository: loggregator/blackbox
 inputs:
 - name: loggregator-ci
+- name: bbl-state
+  optional: true
 params:
   DATADOG_API_KEY:
   CF_API:
