--- a/tasks/blackbox-recent-logs/task.yml
+++ b/tasks/blackbox-recent-logs/task.yml
@@ -5,7 +5,17 @@ image_resource:
     repository: loggregator/base
 inputs:
   - name: loggregator-ci
+  - name: bbl-state
+    optional: true
 params:
   USE_CLIENT_AUTH: false
+  APP_NAME:
+  CF_API:
+  DATADOG_API_KEY:
+  LOGGREGATOR_ADDR:
+  ORG:
+  SPACE:
+  USERNAME:
+  BBL_STATE_DIR:
 run:
   path: loggregator-ci/tasks/blackbox-recent-logs/task
