add bbl-state as an optional input to latency-test
Signed-off-by: Caitlyn Yu <cyu@pivotal.io>

--- a/tasks/latency-test.yml
+++ b/tasks/latency-test.yml
@@ -6,6 +6,8 @@ image_resource:
 inputs:
   - name: loggregator-tools
   - name: loggregator-ci
+  - name: bbl-state
+    optional: true
 params:
   CF_API:
   USERNAME:
