--- a/pipelines/products.yml
+++ b/pipelines/products.yml
@@ -1848,6 +1848,7 @@ jobs:
         cf-syslog-agent-skip-cert-verify.yml
         cf-deployment-windows-addon.yml
         cf-syslog-agent-skip-cert-verify-windows.yml
+        use-provided-router-certs.yml
 
         loggregator-acceptance.yml
       VARS_FILES: ""
@@ -1917,6 +1918,7 @@ jobs:
   - aggregate:
     - get: cf-deployment-concourse-tasks
     - get: deployments-loggregator
+    - get: denver-locks
     - get: cf-acceptance-tests
     - get: loggregator-release
       trigger: true
