--- a/docker-images/base/Dockerfile
+++ b/docker-images/base/Dockerfile
@@ -2,13 +2,15 @@ FROM golang:1.12
 
 RUN go version
 
+RUN add-apt-repository ppa:rmescandon/yq
 RUN apt-get update; apt-get install --yes \
     bundler \
     jq \
     rsync \
     unzip \
     psmisc \
-    vim
+    vim \
+    yq
 
 # get v3 protoc from github, it was in beta at the time of writing
 RUN cd /tmp \
@@ -45,5 +47,3 @@ RUN curl -OL https://github.com/cloudfoundry-incubator/credhub-cli/releases/down
   mv credhub /usr/local/bin && \
   chmod +x /usr/local/bin/credhub && \
   rm credhub-linux-${credhub_cli_version}.tgz
-
-RUN go get gopkg.in/mikefarah/yq.v2
