default key_name to empty string if not set

--- a/pipelines/products.yml
+++ b/pipelines/products.yml
@@ -1506,7 +1506,7 @@ jobs:
         args:
         - "-c"
         - |
-          set -exu
+          set -exuo pipefail
 
           pushd bbl-state/${BBL_STATE_DIR}
             eval "$(bbl print-env)"
