--- a/pipelines/products.yml
+++ b/pipelines/products.yml
@@ -1523,7 +1523,7 @@ jobs:
           disable_ssl_cert_verification: false
 
           broker_name: sample-odb
-          broker_uri:  sample-odb.coconut.cf-app.com
+          broker_uri:  sample-odb.((system_domain))
           broker_route_name: sample-odb
 
           service_catalog_id: 91f32375-980f-4b70-9e62-bef43423823e
