--- a/pipelines/products.yml
+++ b/pipelines/products.yml
@@ -42,6 +42,10 @@ groups:
   - leadership-election-promotion
   - leadership-election-master-promotion
 
+  - service-logs-bump-submodule
+  - service-logs-promotion
+  - service-logs-master-promotion
+
 - name: cf-syslog-drain
   jobs:
   - cats
@@ -100,6 +104,12 @@ groups:
   - leadership-election-bump-submodule
   - leadership-election-promotion
   - leadership-election-master-promotion
+
+- name: service-logs
+  jobs:
+  - service-logs-bump-submodule
+  - service-logs-promotion
+  - service-logs-master-promotion
 
 resources:
 - name: 5m
@@ -411,6 +421,40 @@ resources:
   type: git
   source:
     uri: git@github.com:cloudfoundry/leadership-election-release.git
+    branch: master
+    private_key: ((cf-loggregator-oauth-bot-key))
+    disable_ci_skip: true
+
+- name: fluentbit-loggr-plugin
+  type: git
+  source:
+    uri: git@github.com:cloudfoundry/fluentbit-loggr-plugin
+    private_key: {{cf-loggregator-oauth-bot-key}}
+
+- name: service-logs-release
+  type: git
+  source:
+    uri: git@github.com:cloudfoundry/service-logs-release
+    branch: develop
+    private_key: {{cf-loggregator-oauth-bot-key}}
+    ignore_paths:
+    - .final_builds
+    - releases
+
+- name: service-logs-release-release-elect
+  type: git
+  source:
+    uri: git@github.com:cloudfoundry/service-logs-release.git
+    branch: release-elect
+    private_key: {{cf-loggregator-oauth-bot-key}}
+    ignore_paths:
+    - .final_builds
+    - releases
+
+- name: service-logs-release-master
+  type: git
+  source:
+    uri: git@github.com:cloudfoundry/service-logs-release.git
     branch: master
     private_key: ((cf-loggregator-oauth-bot-key))
     disable_ci_skip: true
@@ -1269,6 +1313,81 @@ jobs:
       DEST_BRANCH: master
       FOLLOW_BUMPS_OF: src/code.cloudfoundry.org/leadership-election
   - put: leadership-election-release-master
+    params:
+      repository: merged-dest
+
+###############################################################################
+# SERVICE LOGS
+###############################################################################
+- name: service-logs-bump-submodule
+  serial: true
+  plan:
+  - aggregate:
+    - get: loggregator-ci
+    - get: service-logs-release
+      trigger: true
+    - get: fluentbit-loggr-plugin
+      trigger: true
+  - task: update-submodule
+    file: loggregator-ci/tasks/bump-submodule/task.yml
+    input_mapping:
+      release-repo: service-logs-release
+      source-repo: fluentbit-loggr-plugin
+    output_mapping:
+      bumped-release-repo: bumped-service-logs-release
+    params:
+      SUBMODULE_PATH: src/code.cloudfoundry.org/fluentbit-loggr-plugin
+  - task: commit
+    file: loggregator-ci/tasks/commit-with-shortlog/task.yml
+    input_mapping:
+      release-repo: bumped-service-logs-release
+    output_mapping:
+      committed-repo: committed-service-logs-release
+    params:
+      PATHS: |
+        src/code.cloudfoundry.org/fluentbit-loggr-plugin
+        packages
+
+  - put: service-logs-release
+    params:
+      repository: committed-service-logs-release
+      rebase: true
+
+- name: service-logs-promotion
+  serial: true
+  plan:
+  - aggregate:
+    - get: develop
+      resource: service-logs-release
+      trigger: true
+      passed: ["service-logs-bump-submodule"]
+    - get: service-logs-release-release-elect
+  - put: service-logs-release-release-elect
+    params:
+      repository: develop
+
+- name: service-logs-master-promotion
+  serial: true
+  plan:
+  - aggregate:
+    - get: 5m
+      trigger: true
+    - get: service-logs-release-release-elect
+      passed: ["service-logs-promotion"]
+      trigger: true
+    - get: service-logs-release-master
+    - get: bumper-tool
+    - get: loggregator-ci
+  - task: bumper
+    file: loggregator-ci/tasks/bumper/task.yml
+    input_mapping:
+      source: service-logs-release-release-elect
+      dest: service-logs-release-master
+    params:
+      SOURCE_BRANCH: release-elect
+      DEST_BRANCH: master
+      FOLLOW_BUMPS_OF: src/code.cloudfoundry.org/service-logs
+  - put: service-logs-release-master
     params:
       repository: merged-dest
 
